# HomeCare

Arduino_BT_Door/: BT_door_close_ver2.ino
Arduino_BT_Window/: blue_window.ino
Door/: openCV.txt
Door/enroll/: CMakeLists.txt  CMakeLists.txt.user.2af5091  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Door/enroll_apps/: CMakeLists.txt  MainWindow.cpp  openCV.txt
Door/recognize/: Arduino.txt  CMakeLists.txt  CMakeLists.txt.user.2af5091  DbManager.h  MainWindow.cpp  MainWindow.h  openCV.txt
Door/recognize_app/: CMakeLists.txt  ConfigLoader.h  DbManager.h  MainWindow.ui
